# global

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  gh_push.sh  publish.sh  pubspec.yaml
.github/: FUNDING.yml
.github/workflows/: beta_compile.yaml
native_lib/: CMakeLists.txt  readme.md
package/global/: pubspec.yaml
package/global/example/: global_example.dart
package/global/lib/: global.dart
package/global/test/: global_test.dart
package/global_android/: pubspec.yaml
package/global_android/lib/: global_android.dart
package/global_android/test/: global_android_test.dart
package/global_apis/: pubspec.yaml
package/global_apis/example/: global_apis_example.dart
package/global_apis/lib/: global_apis.dart
package/global_apis/test/: global_apis_test.dart
package/global_cli/: pubspec.yaml
package/global_cli/example/: global_cli_example.dart
package/global_cli/lib/: global_cli.dart
package/global_cli/test/: global_cli_test.dart
package/global_client/: pubspec.yaml
package/global_client/example/: global_client_example.dart
package/global_client/lib/: global_client.dart
package/global_client/test/: global_client_test.dart
package/global_dart/: LICENSE  pubspec.yaml
package/global_dart/example/: global_dart_example.dart
package/global_dart/lib/: global_dart.dart
package/global_dart/test/: global_dart_test.dart
package/global_flutter/: pubspec.yaml
package/global_flutter/lib/: global_flutter.dart
package/global_flutter/test/: global_flutter_test.dart
package/global_fucshia/: pubspec.yaml
package/global_ios/: pubspec.yaml
package/global_linux/: README.md  pubspec.yaml
package/global_macos/: pubspec.yaml
package/global_server/: pubspec.yaml
package/global_web/: pubspec.yaml
package/global_windows/: pubspec.yaml
test/: global_test.dart
(+15 files in other folders)
